fix hero spacing issue

--- a/css/base.css
+++ b/css/base.css
@@ -139,6 +139,12 @@ a {
   line-height: 1.4;
 }
 
+@media (max-width: 900px) {
+  :lang(th) .hero__heading {
+    line-height: 1.1;
+  }
+}
+
 :lang(th) .section-title {
   line-height: 1.45;
 }
